# events-breakfast-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
containers/k8sutils/: Dockerfile
containers/kafka/: Dockerfile  docker-help.sh
deployments/: kafka.yaml
go/commons/grpc/: BUILD.bazel  listen.go
go/commons/grpc/clients/: BUILD.bazel  clients.go
go/commons/lifecycle/: BUILD.bazel  lifecycle.go
go/commons/serviceregistry/: BUILD.bazel  serviceregistry.go
go/services/delivery/: BUILD.bazel  main.go
go/services/delivery/api/grpc/: BUILD.bazel  grpc.go
go/services/delivery/api/http/: BUILD.bazel  grpcweb.go
go/services/delivery/logic/: BUILD.bazel  logic.go
go/services/order-async/: BUILD.bazel  main.go
go/services/order-async/api/grpc/: BUILD.bazel  grpc.go
go/services/order-async/api/http/: BUILD.bazel  grpcweb.go
go/services/order-async/logic/: BUILD.bazel  logic.go
go/services/order-sync/: BUILD.bazel  main.go
go/services/order-sync/api/grpc/: BUILD.bazel  grpc.go
go/services/order-sync/api/http/: BUILD.bazel  grpcweb.go
go/services/order-sync/logic/: BUILD.bazel  logic.go
go/services/payment/: BUILD.bazel  main.go
go/services/payment/api/grpc/: BUILD.bazel  grpc.go
go/services/payment/api/http/: BUILD.bazel  grpcweb.go
go/services/payment/logic/: BUILD.bazel  logic.go
go/workers/delivery/: BUILD.bazel  main.go
go/workers/delivery/logic/: BUILD.bazel  logic.go
go/workers/payment/: BUILD.bazel  main.go
go/workers/payment/logic/: BUILD.bazel  logic.go
js/: babel.config.js  package.json  tsconfig.json  webpack.config.js
js/breakfast-webapp/: index.ts  package.json  webpack.config.js
js/breakfast-webapp/server/: index.ts
js/breakfast-webapp/src/: App.tsx  index.tsx  routes.tsx  store.ts
js/breakfast-webapp/src/api/: orderApi.ts
js/breakfast-webapp/src/commons/: consts.ts  types.ts
js/breakfast-webapp/src/commons/assets/: fonts-common.css
js/breakfast-webapp/src/commons/components/: BreakfastIllustration.tsx  ErrorBox.tsx  Helmet.tsx
js/breakfast-webapp/src/commons/utils/: apiErrors.ts  colors.ts  grpc.ts  reverseMapping.ts  sizes.ts  styles.ts  typography.ts
js/breakfast-webapp/src/ducks/: apiSlice.ts  orderSlice.ts
js/breakfast-webapp/src/screens/NotFoundScreen/: index.tsx
js/breakfast-webapp/src/screens/OrderBreakfastScreen/: index.tsx
js/breakfast-webapp/src/screens/OrderBreakfastScreen/components/: SuccessGrid.tsx
js/commons/utils/: html-template.ts
js/protos/order/: order_grpc_web_pb.d.ts  order_grpc_web_pb.js  order_pb.d.ts  order_pb.js
protos/: BUILD.bazel
protos/delivery/: BUILD.bazel  delivery.proto
protos/order/: BUILD.bazel  order.proto
protos/payment/: BUILD.bazel  payment.proto
schemas/kafka/local/: BUILD.bazel  topics.sh
