load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "delivery_proto",
    srcs = ["delivery.proto"],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

go_proto_library(
    name = "delivery_grpc_go_library",
    compilers = [
        "//protos:protoc-gen-go",
        "//protos:protoc-gen-grpc",
    ],
    importpath = "protos/delivery",
    proto = ":delivery_proto",
    visibility = ["//visibility:public"],
    deps = [
    ],
)
