load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "payment_proto",
    srcs = ["payment.proto"],
    visibility = ["//visibility:public"],
    deps = [],
)

go_proto_library(
    name = "payment_grpc_go_library",
    compilers = [
        "//protos:protoc-gen-go",
        "//protos:protoc-gen-grpc",
    ],
    importpath = "protos/payment",
    proto = ":payment_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/order:order_grpc_go_library",
    ],
)
