load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "api",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/eggybytes/events/go/services/order-sync",
    deps = [
        "//go/commons/lifecycle:go_default_library",
        "//go/services/order-sync/api/grpc:go_default_library",
        "//go/services/order-sync/api/http:go_default_library",
        "//go/services/order-sync/logic:go_default_library",
    ],
)
