load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logic.go"],
    importpath = "github.com/eggybytes/events/go/services/delivery/logic",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/delivery:delivery_grpc_go_library",
    ],
)
