load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logic.go"],
    importpath = "github.com/eggybytes/events/go/services/order-async/logic",
    visibility = ["//visibility:public"],
    deps = [
        "//go/commons/grpc/clients:go_default_library",
        "//protos/order:order_grpc_go_library",
        "@com_github_segmentio_kafka_go//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
