load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logic.go"],
    importpath = "github.com/eggybytes/events/go/services/order-sync/logic",
    visibility = ["//visibility:public"],
    deps = [
        "//go/commons/grpc/clients:go_default_library",
        "//protos/delivery:delivery_grpc_go_library",
        "//protos/order:order_grpc_go_library",
        "//protos/payment:payment_grpc_go_library",
    ],
)
