load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["logic.go"],
    importpath = "github.com/eggybytes/events/go/services/payment/logic",
    visibility = ["//visibility:public"],
    deps = [
        "//protos/payment:payment_grpc_go_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
