load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["grpcweb.go"],
    importpath = "github.com/eggybytes/events/go/services/order-sync/api/http",
    visibility = ["//visibility:public"],
    deps = [
        "//go/commons/serviceregistry:go_default_library",
        "@com_github_improbable_eng_grpc_web//go/grpcweb:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
